--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Jingyi Cai # your name (or website title) here
-logo: "/images/13297359236562845.jpeg?raw=true" # your photo (or logo) here
+logo: "/images/icon.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Data Scientist 
   <br><br>
-  Second description 
+  Urban Designer
   <br><br>
   <a href="https://www.linkedin.com/in/jingyi-cai-9b9085255/">View My LinkedIn Profile</a> 
   
