--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Jingyi Cai # your name (or website title) here
 logo: "/images/icon.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Data Scientist 
+  Spacial Data Analyst 
   <br><br>
   Urban Designer
   <br><br>
