--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jingyi Cai # your name (or website title) here
-logo: "/images/icon.jpg?raw=true" # your photo (or logo) here
+logo: "/images/new_icon.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Spacial Data Analyst 
   <br><br>
